Make the server app ID the name of the maven module rather than an arbitrary string

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -44,7 +44,7 @@
                 </executions>
                 <configuration>
                     <redeploy>true</redeploy>
-                    <appId>server</appId>
+                    <appId>${project.name}</appId>
                     <verticle>${project.groupId}.${project.name}.MainVerticle</verticle>
                 </configuration>
             </plugin>
